--- a/frontend/src/pages/Blog/Blog.module.css
+++ b/frontend/src/pages/Blog/Blog.module.css
@@ -1,9 +1,7 @@
 .gridItems {
   width: 100%;
+  background: white;
   padding: 15px;
   border-radius: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-/* .gridItems > Image {
-  height: 200px;
-} */
