--- a/frontend/src/pages/Plans/goldPlan.module.css
+++ b/frontend/src/pages/Plans/goldPlan.module.css
@@ -1,5 +1,7 @@
 .bgImage {
   width: 95%;
+  border-radius: 10px;
+  padding: 20px;
   background: white;
   border: "1px" solid black;
   margin: auto;
