Plan details added

--- a/frontend/src/pages/Plans/goldPlan.module.css
+++ b/frontend/src/pages/Plans/goldPlan.module.css
@@ -5,8 +5,10 @@
   background: white;
   border: "1px" solid black;
   margin: auto;
-  background-image: url("https://cdn1.cronometer.com/plans/gold-panel-dots.svg")
-    bottom right;
+  background-image: url("https://cdn1.cronometer.com/plans/gold-panel-dots.svg");
+  /* position: absolute; */
+  bottom: 10%;
+  right: 20%;
   background-size: 300px;
   background-repeat: no-repeat;
 }
