--- a/frontend/src/pages/Plans/goldPlan.module.css
+++ b/frontend/src/pages/Plans/goldPlan.module.css
@@ -6,6 +6,6 @@
   border: "1px" solid black;
   margin: auto;
   /* background-image: url("https://cdn1.cronometer.com/plans/gold-panel-dots.svg"); */
-  background-size: 300px;
+  /* background-size: 300px; */
   background-repeat: no-repeat;
 }
